Add annotation for convenient downstream processing
git-svn-id: file:///home/git/bioc-data.hedgehog.fhcrc.org/trunk/experiment/pkgs/Hiiragi2013@3158 db2202da-8704-0410-b924-b125b3cd84ef

--- a/vignettes/Hiiragi2013.Rnw
+++ b/vignettes/Hiiragi2013.Rnw
@@ -100,53 +100,20 @@ with(subset(pData(x), genotype=="FGF4-KO"), table(Embryonic.day))
 %
 %--------------------------------------------------
 \subsection{Grouping of samples}
-%-------------------------------------------------- 
-We define a grouping of the samples and an associated colour map, which will be used in the plots throughout this report.
-%
-<<sampleColours1>>=
-groups = with(pData(x), list(
- `E3.25`           = which(genotype=="WT" & Embryonic.day=="E3.25"),
- `E3.5 (EPI)`      = which(genotype=="WT" & Embryonic.day=="E3.5" & lineage=="EPI"),
- `E4.5 (EPI)`      = which(genotype=="WT" & Embryonic.day=="E4.5" & lineage=="EPI"),
- `E3.5 (PE)`       = which(genotype=="WT" & Embryonic.day=="E3.5" & lineage=="PE"),
- `E4.5 (PE)`       = which(genotype=="WT" & Embryonic.day=="E4.5" & lineage=="PE"),
- `E3.25 (FGF4-KO)` = which(genotype=="FGF4-KO" & Embryonic.day=="E3.25"),
- `E3.5 (FGF4-KO)`  = which(genotype=="FGF4-KO" & Embryonic.day=="E3.5"),
- `E4.5 (FGF4-KO)`  = which(genotype=="FGF4-KO" & Embryonic.day=="E4.5")))
+%--------------------------------------------------
 
-sampleColourMap = character(length(groups))
-names(sampleColourMap) = names(groups)
-sampleColourMap[c("E3.5 (EPI)", "E4.5 (EPI)")]         = brewer.pal(10, "Paired")[1:2]
-sampleColourMap[c("E3.5 (PE)", "E4.5 (PE)")]           = brewer.pal(10, "Paired")[3:4]
-sampleColourMap[c("E3.25 (FGF4-KO)")]                  = brewer.pal(10, "Paired")[c(7)]
-sampleColourMap[c("E3.5 (FGF4-KO)", "E4.5 (FGF4-KO)")] = brewer.pal(10, "Paired")[c(8,6)]
-sampleColourMap[c("E3.25")]                            = brewer.pal(12, "Paired")[c(9)]
-stopifnot(!any(sampleColourMap==""))
-@
-The following assertions aim to make sure that each sample was assigned to exactly one group.
-<<sampleColours2>>=
-stopifnot(!any(duplicated(unlist(groups))),
-          setequal(unlist(groups), seq_len(ncol(x))),
-          setequal(names(sampleColourMap), names(groups)))
-@
-Statistics:
-<<grpstat>>=
+The preprocessed data object defines the grouping of the samples and an associated colour map, which will be used in the plots throughout this report.
+%
+<<sampleColours>>=
+groups = split(seq_len(ncol(x)), pData(x)$sampleGroup)
 sapply(groups, length)
 @
 %
-Next, assign a colour and a name to each sample, which will be used in the subsequent plots.
-For sample names, use the group name and the array numeric index.
+Each sample has assigned a colour which will be used in the subsequent plots.
 %
-<<sampleColours3>>=
-sampleNames = sampleGroup = rep(NA_character_, ncol(x))
-for(i in seq(along = groups)) {
-  idx = groups[[i]]
-  sampleGroup[idx] = names(groups)[i]
-  sampleNames[idx] = paste(idx, names(groups)[i])
-}
-pData(x)$sampleGroup  = sampleGroup
-pData(x)$sampleColour = sampleColourMap[sampleGroup]
-sampleNames(x) = sampleNames
+<<sampleColours>>=
+sampleColourMap = setNames(unique(pData(x)$sampleColour), unique(pData(x)$sampleGroup))
+sampleColourMap
 @
 %
 For some analyses, we need to specifically address the four probes mapping to FGF4.
